--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=DAWPROJECT;User=sa;Password=Strong.Pwd-123"
+  },
+  "Jwt": {
+    "Key": "ProiectDawTest1234151512522415161",
+    "Issuer": "ProiectDaw.com"
   }
 }
